# ti-tools

./: .gitmodules  Cargo.toml  LICENSE  README.md  download.8xp  temp.txt
.github/workflows/: publish.yml  pull_request.yml
programs/: BASECONV.txt  DBD.82p  FACTOR.8xp  MATHTOOL.8xp  QUEUESIM.8xp  QUEUESIM.txt  SPLINE.txt
src/: cli.rs  colors.rs  errors.rs  lib.rs  main.rs  styles.rs
src/calculator/: create.rs  decode.rs  encode.rs  errors.rs  mod.rs  models.rs  program.rs
src/calculator/create/: from_8xp.rs  from_txt.rs  mod.rs
src/calculator/file/: decode.rs  encode.rs  from_8xp.rs  from_txt.rs  mod.rs
src/calculator/tokens/: mod.rs  parse.py  token_definitions.json
src/commands/: archive.rs  comment.rs  convert.rs  decode.rs  details.rs  encode.rs  lock.rs  mod.rs  models.rs  rename.rs  search.rs  unarchive.rs  unlock.rs
src/commands/convert/: mod.rs  txt_to_8xp.rs  xp_to_txt.rs
src/commands/edit/: archive.rs  comment.rs  mod.rs  (+4 more)
src/program/: create.rs  decode.rs  encode.rs  mod.rs
src/tests/: ALLTOKS.8xp  RADICAL.8xp  archive_and_unarchive.rs  comment.rs  conversion.rs  expected_body.txt  lock_and_unlock.rs  mod.rs  output.txt  radical.txt  rename.rs  test.txt  tokens.txt
src/tokens/: accessible_to_display_tokens.rs  equation_tokens.rs  gdb_tokens.rs  graph_format_tokens.rs  list_tokens.rs  matrix_tokens.rs  misc_tokens.rs  mod.rs  picture_tokens.rs  single_byte_tokens.rs  statistic_variable_tokens.rs  string_tokens.rs  ti_84_tokens.rs  window_and_finance_tokens.rs
tests/: archive_and_unarchive.rs  comment.rs  conversion.rs  lock_and_unlock.rs  rename.rs  token_load.rs
tests/programs/: DBD.83p  DBD.txt  POLCONIC.txt  RADICAL.8xp  TOCCATA.8xp
wiki/: .gitignore  8xp-File-Structure.md  8xp-structure.md  Home.md  build-md-tokens.py  decoding.md  encoding.md  tokens.md  txt-File-Structure.md  txt-structure.md
(+24 files in other folders)
