[package]
name = "ti-tools"
version = "0.1.2"
edition = "2021"
authors = ["cqb13 <cqb13.dev@gmail.com>"]
license = "MIT"
description = "A CLI tool to convert 8xp files to text and back."
readme = "README.md"
homepage = "https://github.com/cqb13/ti-tools"
repository = "https://github.com/cqb13/ti-tools"
keywords = ["cli", "ti", "8xp", "tools", "utilities", "ti-84"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
