[package]
name = "ti-tools"
version = "0.1.4"
edition = "2021"
authors = ["cqb13 <cqb13.dev@gmail.com>"]
license = "MIT"
description = "A CLI tool to convert 8xp files to text and back."
readme = "README.md"
homepage = "https://github.com/cqb13/ti-tools"
repository = "https://github.com/cqb13/ti-tools"
keywords = ["cli", "ti", "8xp", "tools", "utilities", "ti-84"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"