[package]
name = "ti-tools"
version = "0.1.8"
edition = "2021"
authors = ["cqb13 <cqb13.dev@gmail.com>"]
license = "MIT"
description = "A CLI tool designed for converting 8xp files (used by TI-83 and TI-84 calculators) to text files and vice versa."
readme = "README.md"
homepage = "https://github.com/cqb13/ti-tools"
repository = "https://github.com/cqb13/ti-tools"
keywords = ["cli", "ti", "8xp", "tools", "utilities", "ti-84"]
categories = ["command-line-utilities"]

[lib]
name = "ti_tools"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
